<resources>
    <string name="app_name">My ApplicationFragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_new_name">Введите новое имя...</string>
    <string name="input_new_last_name">Введите новую фамилию...</string>
    <string name="save_change">Сохранить изменения</string>
    <string name="delete_user">Удалить пользователя</string>
    <string name="add_user">Добавить пользователя</string>
    <string name="text_name">Имя</string>
    <string name="text_last_name">Фамилия</string>
    <string name="input_name">Введите имя...</string>
    <string name="input_last_name_add_user">Введите фамилию...</string>
    <string name="add_on_add_new_user_fr_btn">Добавить</string>
</resources>