<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="25sp"
    android:text="@string/text_name"
    android:id="@+id/new_user_name"
    android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/input_new_user_name"
        android:hint="@string/input_name"/>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="25sp"
    android:text="@string/text_last_name"
        android:id="@+id/new_user_lastName"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/input_new_user_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_last_name_add_user"
        android:textSize="25sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_new_user_btn"
        android:text="@string/add_on_add_new_user_fr_btn"/>
</LinearLayout>